--- a/src/tokenizer/QED_tokenizer/tokenizer_config.json
+++ b/src/tokenizer/QED_tokenizer/tokenizer_config.json
@@ -31,12 +31,20 @@
       "rstrip": false,
       "single_word": false,
       "special": true
+    },
+    "4": {
+      "content": "[STATE_ID]",
+      "lstrip": false,
+      "normalized": false,
+      "rstrip": false,
+      "single_word": false,
+      "special": true
     }
   },
   "clean_up_tokenization_spaces": false,
   "cls_token": "[CLS]",
   "extra_special_tokens": {},
-  "mask_token": "[MASK]",
+  "mask_token": "[STATE_ID]",
   "model_max_length": 1000000000000000019884624838656,
   "pad_token": "[PAD]",
   "sep_token": "[SEP]",
