--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pandas 
-numpy 
-scikit-learn 
-sympy 
-pykan
-torch
-tensorflow 
-transformers
-tokenizers
+einops==0.8.1
+sympy==1.12
+sympy==1.13.1
+torch==2.5.1
+torch==2.5.0
+tqdm==4.67.0
+tqdm==4.67.1
+tqdm==4.66.4
+tqdm==4.66.5
+transformers==4.46.2
