--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 model.pth 
 transformer_qed_sequence_test.pth
 transformer_qed_sequence_full.pth
+./QED_data
+.gitignore 
+.gitattributes 
+./test 
+./tests
